fixed footer overlapping issue

--- a/src/Pages/Shared/Footer/Footer.css
+++ b/src/Pages/Shared/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer-tag {
-    margin: 10vh 0;
+    margin: 10rem 0;
 }
 .footer-items {
     font-family: 'Poppins';
